# Nemesis

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  json_extractor.py  pyproject.toml  run_libpng.sh  setup_wsl.sh
.github/workflows/: ci.yml
benchmarks/: NEXT_TARGET.md
benchmarks/cjson_cve_2023_53154/: README.md  build_asan.sh  crash_input.json  oracle.sh  rediscovery_campaign.csv  reproduce.sh
benchmarks/libnmea_harness_e2e/: README.md  check_thresholds.py  collect.py  libnmea.yaml  reproduce.sh  thresholds.json
benchmarks/libpng_cve_2018_13785/: README.md  build_repro.sh  harness.c  oracle.sh  reproduce.sh
benchmarks/minmea_harness_comparison/: README.md  build_cflite.sh  compare.py  run_cflite.sh
benchmarks/minmea_harness_generation/: README.md  extract_validation.py  generation_benchmark.py
benchmarks/onboard_suite/: .gitignore  CRITERIA.md  FINDINGS.md  SAMPLE_PROFILE.md  build_pool.py  characterise.py  environment.py  pool.json  preflight.py  repos.yaml  run_suite.py  sample_profile.json  schema.py
config/: default.yaml
config/targets/: brotli.yaml  cjson.yaml  draco.yaml  expat.yaml  flatbuffers.yaml  gpac.yaml  lcms2.yaml  libarchive.yaml  libcue.yaml  libpng.yaml  libsmf.yaml  libsndfile.yaml  libtiff.yaml  libwebp.yaml  libxml2.yaml  libxml2_recent.yaml  lz4.yaml  minmea.yaml  re2.yaml  rpng.yaml  wavpack.yaml
docker/: Dockerfile  docker-compose.yaml
docs/: known_gaps.md
docs/benchmarks/: campaign_libpng_4min.csv  campaign_libpng_matched_control.csv  campaign_libtiff_matched_control.csv  fieldspec_seed_quality.md  generation_audit.json  png_ctl2.json
experiments/harness_autonomy/: FINDINGS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts  ui.tsx
nemesis/: __init__.py  benchmark.py  cli.py  config.py  daemon.py  feature_flags.py  library_memory.py  library_resolver.py  logging.py  models.py  onboard.py  pipeline.py  reporter.py  run_status.py  setup.py  upstream.py  verifier.py
nemesis/api/: __init__.py  app.py  models.py
nemesis/feedback/: __init__.py
nemesis/fuzzing/: __init__.py  seed_synthesizer.py
nemesis/neural/: __init__.py  context_builder.py  json_extractor.py  oracle.py
nemesis/recon/: __init__.py  bug_class.py  byte_influence.py  caller_graph.py  cve_context.py  fieldspec_seedgen.py  format_spec_synthesis.py  format_specs.py  git_history.py  mutator_synthesis.py  oracle_validation.py  predicate_synthesis.py  probe_build.py  roundtrip_seedgen.py  sanitizer_ranker.py  seed_evolve.py  seed_pipeline.py  seedgen.py  target_scout.py  validation_gates.py  z3_seedgen.py
nemesis/symbolic/: __init__.py  variadic_arity.py  visibility_patch.py
nemesis/templates/: afl_custom_mutator_brotli.c  fuzz_data_provider.h
prompts/: blocker_analysis.md
scripts/: _analyze_crashes.sh  _cjson_onboard.sh  _cjson_repro.sh  _cjson_setup_run.sh  _cjson_watch.sh  _commit_msg.txt  _cve2022_onboard.sh  _cve2022_run.sh  _cve2022_setup.sh  _cve_repro_final.sh  _libpng_pipeline.sh  _libpng_watch.sh  _libtiff_onboard.sh  _libtiff_run_only.sh  _libtiff_setup_run.sh  _libtiff_watch.sh  _nim_probe.sh  _repro_all.sh  _repro_one.sh  _test_fix139.py  bench_campaign.sh  bench_fieldspec.py  bench_report.py  check_crash_reporting.sh  cve_sweep.sh  demo_oracle_expansion.py  gen_control_seeds.py  generate_brotli_seeds.py  pipeline_health_check.py  qualify_benchmark.sh  repro_crashes.sh
seeds/: README.md
seeds/acl_text/: acl_with_null.txt  nfs4_basic.txt  nfs4_full.txt  posix_basic.txt  posix_default.txt  posix_deny_all.txt  posix_named.txt  posix_nobody.txt  posix_simple.txt  user_colon_colon.txt
seeds/all_formats/: crash_seed1  crash_seed2
seeds/cab/: crash_cab_min
seeds/iso/: test_fuzz_1.iso  test_read_format_iso.iso  test_read_format_iso_2.iso  test_read_format_iso_3.iso  test_read_format_iso_joliet.iso  test_read_format_iso_joliet_by_nero.iso  test_read_format_iso_joliet_long.iso  test_read_format_iso_joliet_rockridge.iso  test_read_format_iso_multi_extent.iso  test_read_format_iso_rockridge_ce.iso  test_read_format_iso_xorriso.iso  test_read_format_iso_zisofs.iso
seeds/json/: bignum.json  deep.json  escapes.json  nested.json  types.json  unicode.json
seeds/lha/: test_read_format_lha_bugfix_0.lzh  (+3 more)
seeds/pax/: acl_s1.tar  (+13 more)
tests/: mutator_harness.c  test_alignment_cwe.py  test_analysis_binary_library_resolution.py  test_analysis_quality_degradation.py  test_byte_influence.py  test_checkpoint_config_guard.py  test_code_version_provenance.py  test_config_and_models.py  test_corpus_harvest_ext.py  test_coverage_route.py  test_crash_minimize.py  test_differential_oracle_prompt.py  test_disclosure_report.py  test_fieldspec_seedgen.py  test_functions_route.py  test_fuzzing_stage_api.py  test_git_history.py  test_harness_quality_score.py  test_harness_validation_integration.py  test_jobs_route.py  test_library_memory.py  test_library_resolver.py  test_msan_profile.py  test_mutator_adapters.py  test_neural_extract.py  test_onboard_cmake_options.py  test_onboard_cpp_detection.py  test_onboard_include_layout.py  test_onboard_meson.py  test_onboard_oracle_hints.py  test_oracle_validation.py  test_pipeline_health_check.py  test_predicate_canary.py  test_predicate_injection_compiles.py  test_probe_build.py  test_recon_candidate_extraction.py  test_recon_entry_point_score.py  test_recon_harness_exclusion.py  test_refinement_loop_measures.py  test_reporter_dedup.py  (+15 more)
(+300 files in other folders)
