[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nemesis"
version = "0.1.0"
description = "Neuro-symbolic vulnerability discovery for C/C++ libraries: LLM-generated fuzzing harnesses, Z3 verification and AFL++"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Georgios Patsakas", email = "giorgospatsakas@gmail.com" },
]
keywords = [
    "llm", "agentic-ai", "fuzzing", "security", "cybersecurity",
    "symbolic-execution", "z3", "aflplusplus", "program-analysis",
    "vulnerability-research", "oss-fuzz", "cve",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Core
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "pyyaml>=6.0",
    # Round-trip YAML: the dashboard writes pinned_funcs back into
    # config/targets/*.yaml and must not destroy their comments.
    "ruamel.yaml>=0.18",
    "click>=8.1",
    "rich>=13.0",
    "structlog>=24.1",
    # Neural (Stage 2)
    "groq>=0.9",
    # Symbolic (Stage 3)
    "z3-solver>=4.12",
    # Fuzzing support (Stage 4)
    "psutil>=5.9",
    # HTTP for Introspector API
    "httpx>=0.27",
    # Codebase Oracle (RAG) — Stage 2 context injection
    "numpy>=1.24",
    "faiss-cpu>=1.7.0",
    "libclang>=18.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]
angr = [
    "angr>=9.2",
]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
nemesis = "nemesis.cli:cli"

[project.urls]
Homepage = "https://github.com/Patsakas/Nemesis"
Repository = "https://github.com/Patsakas/Nemesis"
Issues = "https://github.com/Patsakas/Nemesis/issues"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
# CI gates on this configuration, so every entry below is a deliberate decision
# rather than a way to silence noise. The correctness rules (F, E9, B) are all
# enforced — they are what caught a real `NameError` in the predicate canary.
ignore = [
    "E501",   # line length: prompts and ASCII tables read worse when wrapped
    "E712",   # `x == True` builds a Z3 constraint here, it is not a truth test
    "N806",   # locals mirror the C symbols under analysis (CWE, IDAT, ...)
    "UP042",  # migrating to StrEnum changes serialization; separate change
    "SIM102", "SIM103", "SIM105", "SIM108", "SIM113", "SIM114",  # style preferences
    "SIM115", # a few file handles are intentionally long-lived
    "E402",   # heavy deps are imported lazily, after the module docstring
    "E741",   # `l` survives in two parser loops
    "B007",   # unused loop vars document what is being iterated
]

[tool.ruff.lint.per-file-ignores]
# Tests favour readability over import hygiene.
"tests/*" = ["N802", "N803"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
